Added docker compose for backend and docker file